--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -30,8 +30,12 @@
 
   p {
     font-size: 1.5rem;
-    line-height: 1.5rem;
+    line-height: 2.5rem;
     margin-top: 1.5rem;
+
+    small {
+      font-size: 1rem;
+    }
 
     span {
       color: var(--cyan-500);
